--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Darkness</title>
+<title>Morgane Dauphin</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="layout/styles/layout.css" type="text/css" />
 </head>
@@ -16,8 +16,8 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper">
   <div id="header">
     <div id="logo">
-      <h1><a href="index.html">Darkness</a></h1>
-      <p>Free Website Template</p>
+      <h1><a href="index.html">Morgane Dauphin</a></h1>
+      <p>Infographiste</p>
     </div>
     <div id="topnav">
       <ul>
