--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Licence URI: http://www.os-templates.com/template-terms
     </div>
     <div id="topnav">
       <ul>
-        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><a href="index.html">Mes Réalisations</a></li>
         <li><a href="pages/style-demo.html">Test1</a></li>
         <li><a href="pages/full-width.html">Test2</a></li>
         <li><a href="#">Looooooll</a></li>
@@ -35,8 +35,8 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="latest">
     <div class="fl_left"><a href="#"><img src="images/demo/575x300.gif" alt="" /></a></div>
     <div class="fl_right">
-      <h2>Cursus penati saccum ut.</h2>
-      <p>Cursuspenatisaccum ut curabitur nulla tellus tor ames a in curabitur pede. Idet mollisi eros dis orci congue elis et curabitur consequam intesque. Cursuspenatisaccum ut curabitur nulla tellus tor.</p>
+      <h2>Ma dernière réalisation.</h2>
+      <p>Vidéo de visite d'un bâtiment réaliser avec le logiciel 3Ds Max et en moteur de rendu "mentale ray". Visite extérieur et intérieur de la résidence</p>
       <ul>
         <li><a href="#"><img src="images/demo/100x100.gif" alt="" /></a></li>
         <li><a href="#"><img src="images/demo/100x100.gif" alt="" /></a></li>
@@ -50,23 +50,23 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="intro">
     <ul>
       <li>
-        <h2>Indonectetus facilis leo nibh</h2>
+        <h2>Indonectetus facilis leo nibh111111</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
+        <p>1Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
         <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
       <li>
-        <h2>Indonectetus facilis leo nibh</h2>
+        <h2>Indonectetus facilis leo nibh2222222</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
+        <p>2Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
         <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
       <li class="last">
-        <h2>Indonectetus facilis leo nibh</h2>
+        <h2>Indonectetus facilis leo nibh3333333</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
+        <p>3Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
         <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
@@ -77,7 +77,7 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper">
   <div id="container">
     <div id="content">
-      <h2>About This Free CSS Template</h2>
+      <h2>About This Free CSS Template4444</h2>
       <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>.</p>
       <p>This template is distributed using a <a href="http://www.os-templates.com/template-terms">Website Template Licence</a>, which allows you to use and modify the template for both personal and commercial use when you keep the provided credit links in the footer.</p>
       <p>For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>.</p>
