Ajout de texte1

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ Licence URI: http://www.os-templates.com/template-terms
     <div class="fl_left"><a href="#"><img src="images/demo/575x300.gif" alt="" /></a></div>
     <div class="fl_right">
       <h2>Ma dernière réalisation.</h2>
-      <p>Vidéo de visite d'un bâtiment réaliser avec le logiciel 3Ds Max et en moteur de rendu "mentale ray". Visite extérieur et intérieur de la résidence</p>
+      <p>Vidéo sur un bâtiment réaliser avec le logiciel 3Ds Max et en moteur de rendu "mentale ray.</p>
+      <p>Visite extérieur et intérieur de la résidence comptant un rendu de 3400 images.</p>
       <ul>
         <li><a href="#"><img src="images/demo/100x100.gif" alt="" /></a></li>
         <li><a href="#"><img src="images/demo/100x100.gif" alt="" /></a></li>
@@ -50,10 +51,11 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="intro">
     <ul>
       <li>
-        <h2>Indonectetus facilis leo nibh111111</h2>
+        <h2>Illusion d'optique</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>1Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
-        <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
+        <p>Dans le cadre de la découverte de photoshop lors de la licence ISN il a été demander de réalisé un montage photo créant une illusion d'optique. </p>
+        <p>Logiciels : Photoshop.</p>
+        <p>Année : 2014.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
       <li>
