--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="header">
     <div id="logo">
       <h1><a href="index.html">Morgane Dauphin</a></h1>
-      <p>Infographiste</p>
+      <p>Infographiste et modélisatrice 3D</p>
     </div>
     <div id="topnav">
       <ul>
@@ -59,17 +59,19 @@ Licence URI: http://www.os-templates.com/template-terms
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
       <li>
-        <h2>Indonectetus facilis leo nibh2222222</h2>
+        <h2>Scène Japonaise</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>2Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
-        <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
+        <p>Lors de ma découverte du logiciel Blender, j'ai réalisé une scène de mon choix, japonaise, que j'ai réalisée entièrement. </p>
+        <p>Logiciels : Blender.</p>
+        <p>Année : 2014.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
       <li class="last">
-        <h2>Indonectetus facilis leo nibh3333333</h2>
+        <h2>Décor de jeux vidéo</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>3Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
-        <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
+        <p>J'ai réaliser le décors d'un jeu vidéo que l'ont avais nommer Labyrinth et qui était réaliser en groupe. Malgrés que les décors soit finis le jeux en lui même n'as pas pu être mener à bien par manque de temps. </p>
+        <p>Logiciels : Unity3D, Blender.</p>
+        <p>Année : 2014.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
     </ul>
@@ -79,10 +81,10 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper">
   <div id="container">
     <div id="content">
-      <h2>About This Free CSS Template4444</h2>
-      <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>.</p>
-      <p>This template is distributed using a <a href="http://www.os-templates.com/template-terms">Website Template Licence</a>, which allows you to use and modify the template for both personal and commercial use when you keep the provided credit links in the footer.</p>
-      <p>For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>.</p>
+      <h2>Apropos de mes réalisations</h2>
+      <p>La plupart de mes réalisations on été faite à partir de l'année <a>2014</a>, lorsque que j'ai réellement appris l'infographie et la modélisation 3D.</p>
+      <p>Bien que .</p>
+      <p>Merci.</p>
     </div>
     <div id="column">
       <div class="holder">
