Ajout de texte3

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@ Licence URI: http://www.os-templates.com/template-terms
     <div class="fl_left"><a href="#"><img src="images/demo/575x300.gif" alt="" /></a></div>
     <div class="fl_right">
       <h2>Ma dernière réalisation.</h2>
-      <p>Vidéo sur un bâtiment réaliser avec le logiciel 3Ds Max et en moteur de rendu "mentale ray.</p>
-      <p>Visite extérieur et intérieur de la résidence comptant un rendu de 3400 images.</p>
+      <p>Vidéo sur un bâtiment réaliser avec le logiciel 3Ds Max et en moteur de rendu "mentale ray".</p>
+      <p>Visite extérieur et intérieur de la résidence. Pour effectuer cette vidéo il m'as fallu pas moins de 3400 images.</p>
+      <p>Logiciels :3Ds Max, Photoshop, Adobe Premiere.</p>
+      <p>Année : 2015</p>
       <ul>
         <li><a href="#"><img src="images/demo/100x100.gif" alt="" /></a></li>
         <li><a href="#"><img src="images/demo/100x100.gif" alt="" /></a></li>
@@ -69,7 +71,7 @@ Licence URI: http://www.os-templates.com/template-terms
       <li class="last">
         <h2>Décor de jeux vidéo</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>J'ai réaliser le décors d'un jeu vidéo que l'ont avais nommer Labyrinth et qui était réaliser en groupe. Malgrés que les décors soit finis le jeux en lui même n'as pas pu être mener à bien par manque de temps. </p>
+        <p>J'ai réalisé les décors d'un jeu vidéo que l'ont avais nommer "Labyrinth" et qui était réaliser en groupe. Malgrés que les décors soit finis le jeux en lui même n'as pas pu être mener à bien par manque de temps. </p>
         <p>Logiciels : Unity3D, Blender.</p>
         <p>Année : 2014.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
@@ -83,7 +85,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="content">
       <h2>Apropos de mes réalisations</h2>
       <p>La plupart de mes réalisations on été faite à partir de l'année <a>2014</a>, lorsque que j'ai réellement appris l'infographie et la modélisation 3D.</p>
-      <p>Bien que .</p>
+      <p> .</p>
       <p>Merci.</p>
     </div>
     <div id="column">
