--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Licence URI: http://www.os-templates.com/template-terms
 </div>
 <div class="wrapper">
   <div id="latest">
-    <div class="fl_left"><a href="#"><img src="images/demo/575x300.gif" alt="" /></a></div>
+    <div class="fl_left"><a href="#"><img src="images/RenduBlenderJaponaise.png" alt="" /></a></div>
     <div class="fl_right">
       <h2>Ma dernière réalisation.</h2>
       <p>Vidéo sur un bâtiment réaliser avec le logiciel 3Ds Max et en moteur de rendu "mentale ray".</p>
