--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">Infographie Modélisation</a></h1>
+					<h1><a href="#"><strong>DAUPHIN Morgane</strong> Infographie et Modélisation</a></h1>
 				</div>
 				
 				<!-- Nav -->
