--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">DAUPHIN Morgane Infographie et Modélisation</a></h1>
+					<h1><a href="#">DAUPHIN Morgane</a></h1>
+					<p>Infographie et Modélisation</p>
 				</div>
 				
 				<!-- Nav -->
