Changement du header avec un br

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">DAUPHIN Morgane</a></h1>
-					<p>Infographie et Modélisation</p>
+					<h1><a href="#">DAUPHIN Morgane</a><br/>Infographie et Modélisation</h1>
 				</div>
 				
 				<!-- Nav -->
