--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<h2>Résidence de 40 studio</h2>
 						</header>
 						<a href="#" class="image full"><img src="images/pics06.jpg" alt=""></a>
-						<p><visite virtuelle, sous forme d'une vidéo, d'un bâtiments de 40 studios modéliser à partir des plans d'architecte.</p>
+						<p>Visite virtuelle, sous forme d'une vidéo, d'un bâtiments de 40 studios modéliser à partir des plans d'architecte.</p>
 						<a href="#" class="button">Read More</a>
 					</section>
 					<section class="3u">
@@ -89,23 +89,23 @@
 							<h2>Illusion d'optique</h2>
 						</header>
 						<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
-						<p>Pellentesque viverra  enim.Tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum.</p>
+						<p>Réalisation d'un montage créant un effet d'optique.</p>
 						<a href="#" class="button">Read More</a>
 					</section>
 					<section class="3u">
 						<header>
-							<h2>Etiam posuere</h2>
+							<h2>Scène Japonaise</h2>
 						</header>
 						<a href="#" class="image full"><img src="images/pics08.jpg" alt=""></a>
-						<p>Pellentesque viverra  enim.Tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum.</p>
+						<p>Modélisation d'une scène prenant ploace dans un salon de style japonais donnant sur le jardin de nuit..</p>
 						<a href="#" class="button">Read More</a>
 					</section>
 					<section class="3u">
 						<header>
-							<h2>Fusce ultrices</h2>
+							<h2>Compositing et retouche photo</h2>
 						</header>
 						<a href="#" class="image full"><img src="images/pics09.jpg" alt=""></a>
-						<p>Pellentesque viverra  enim.Tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum.</p>
+						<p>Travail sur le compositing d'une image déja existante, ajout de ciel, végétation, changement des ombres et ajout de personnages.</p>
 						<a href="#" class="button">Read More</a>
 					</section>
 				</div>
