Essaye photo illusion

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<header>
 							<h2>Illusion d'optique</h2>
 						</header>
-						<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
+						<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
 						<p>Réalisation d'un montage créant un effet d'optique.</p>
 						<a href="#" class="button">Read More</a>
 					</section>
