Ajout des images dans les articles

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<header>
 							<h2>Scène Japonaise</h2>
 						</header>
-						<a href="#" class="image full"><img src="images/pics08.jpg" alt=""></a>
+						<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
 						<p>Modélisation d'une scène prenant ploace dans un salon de style japonais donnant sur le jardin de nuit..</p>
 						<a href="#" class="button">Read More</a>
 					</section>
@@ -104,7 +104,7 @@
 						<header>
 							<h2>Compositing et retouche photo</h2>
 						</header>
-						<a href="#" class="image full"><img src="images/pics09.jpg" alt=""></a>
+						<a href="#" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
 						<p>Travail sur le compositing d'une image déja existante, ajout de ciel, végétation, changement des ombres et ajout de personnages.</p>
 						<a href="#" class="button">Read More</a>
 					</section>
