--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 						<header>
 							<h2>Résidence de 40 studio</h2>
 						</header>
-						<a href="#" class="image full"><img src="images/pics06.jpg" alt=""></a>
-						<p>Visite virtuelle, sous forme d'une vidéo, d'un bâtiments de 40 studios modéliser à partir des plans d'architecte.</p>
+						<a href="#" class="image full"><img src="images/AFAEDAM_perspective.bmp" alt=""></a>
+						<p>Visite virtuelle, sous forme d'une vidéo, d'un bâtiment de 40 studios modélisés à partir des plans d'architecte.</p>
 						<a href="#" class="button">Read More</a>
 					</section>
 					<section class="3u">
