changement bouton et images en bas

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">DAUPHIN Morgane</a><br/>Infographie et Modélisation</h1>
+					<h1><a href="#">DAUPHIN Morgane</a></h1>
 				</div>
 				
 				<!-- Nav -->
@@ -124,7 +124,7 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics03.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/table-lit.bmp" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
@@ -133,7 +133,7 @@
 							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
 						</section>
 					</div>
-					<a href="#" class="button">Nulla luctus eleifend</a>
+					<a href="#" class="button">Gallerie</a>
 				</section>
 			</div>
 		</div>
