slash devant image

--- a/pages projets/residence_studio.html
+++ b/pages projets/residence_studio.html
@@ -108,13 +108,13 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics03.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="/images/pics03.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="/images/pics04.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="/images/pics05.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="#" class="button">Nulla luctus eleifend</a>
