--- a/pages projets/residence_studio.html
+++ b/pages projets/residence_studio.html
@@ -68,14 +68,14 @@
 							<header>
 								<h2>Donec dictum</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="/images/pics07.jpg" alt=""></a>
 							<p>Pellentesque viverra  enim.Tristique ante ut risus. Quisque dictum. Integer nisl elementum.</p>
 						</section>
 						<section>
 							<header>
 								<h2>Sagittis convallis</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/pics08.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="/images/pics08.jpg" alt=""></a>
 							<p>Quisque dictum. Integer nisl risus, sagittis convallis elementum.</p>
 						</section>
 					</div>
