Changement de lien page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						</header>
 						<a href="#" class="image full"><img src="images/AFAEDAM_perspective.bmp" alt=""></a>
 						<p>Visite virtuelle, sous forme d'une vidéo, d'un bâtiment de 40 studios modélisés à partir des plans d'architecte.</p>
-						<a href="pages projets/residence_studio.html" class="button">Read More</a>
+						<a href="twocolumn1 - residence.html" class="button">Read More</a>
 					</section>
 					<section class="3u">
 						<header>
@@ -90,7 +90,7 @@
 						</header>
 						<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
 						<p>Réalisation d'un montage créant un effet d'optique.</p>
-						<a href="#" class="button">Read More</a>
+						<a href="twocolumn2 - illusion.html" class="button">Read More</a>
 					</section>
 					<section class="3u">
 						<header>
