--- a/twocolumn1 - residence.html
+++ b/twocolumn1 - residence.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Royale by TEMPLATED</title>
+		<title>Dauphin Morgane</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,7 +32,7 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">Royale</a></h1>
+					<h1><a href="#">Dauphin Morgane</a></h1>
 				</div>
 				
 				<!-- Nav -->
@@ -66,16 +66,16 @@
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Donec dictum</h2>
+								<h2>Avant retouche</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
 							<p>Pellentesque viverra  enim.Tristique ante ut risus. Quisque dictum. Integer nisl elementum.</p>
 						</section>
 						<section>
 							<header>
-								<h2>Sagittis convallis</h2>
+								<h2>Aprés retouche</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/pics08.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
 							<p>Quisque dictum. Integer nisl risus, sagittis convallis elementum.</p>
 						</section>
 					</div>
@@ -83,10 +83,10 @@
 					<div id="content" class="9u skel-cell-important">
 						<section>
 							<header>
-								<h2>Left Sidebar</h2>
+								<h2>Illusion d'optique</h2>
 							</header>
-							<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
-							<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+							<p>Dans le cadre de la découverte de photoshop lors de ma Licence Professionnelle Image et Sons Numérique, on nous a demander de réaliser un montage photo sur le théme de l'illusion d'optique.</p>
+							<p>Aprés avir effectuer des recherches pour me faire une idée de ce que je pourrais réaliser comme illusion d'optique, je me suis décider d'en faire un donnant l'impression qu'il y a plusieurs ranger de colonne alors qu'en réalité, il n'y en a qu'une. Pour cela j'ai pris des chevaux que j'ai découper à l'endroit des colonne pour que l'ont ai l'impression que ce dernier passe dérrière le pilier. J'ai répéter cette opértion plusieurs fois pour donner ce résultat. </p>
 							<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
 						</section>
 					</div>
