Finission des textes

--- a/twocolumn1 - illusion.html
+++ b/twocolumn1 - illusion.html
@@ -39,7 +39,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
-						<li class="active"><a href="twocolumn1.html">Left Sidebar</a></li>
+						<li><a href="twocolumn1.html">Left Sidebar</a></li>
 						<li><a href="twocolumn2.html">Right Sidebar</a></li>
 						<li><a href="onecolumn.html">No Sidebar</a></li>
 					</ul>
@@ -69,14 +69,14 @@
 								<h2>Avant retouche</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
-							<p>Pellentesque viverra  enim.Tristique ante ut risus. Quisque dictum. Integer nisl elementum.</p>
+							<p>Image des colonnes avant montage photo.</p>
 						</section>
 						<section>
 							<header>
 								<h2>Aprés retouche</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
-							<p>Quisque dictum. Integer nisl risus, sagittis convallis elementum.</p>
+							<p>Résultat finale aprés retouche avec le logiciel Photoshop.</p>
 						</section>
 					</div>
 					
@@ -87,7 +87,8 @@
 							</header>
 							<p>Dans le cadre de la découverte de photoshop lors de ma Licence Professionnelle Image et Sons Numérique, on nous a demander de réaliser un montage photo sur le théme de l'illusion d'optique.</p>
 							<p>Aprés avir effectuer des recherches pour me faire une idée de ce que je pourrais réaliser comme illusion d'optique, je me suis décider d'en faire un donnant l'impression qu'il y a plusieurs ranger de colonne alors qu'en réalité, il n'y en a qu'une. Pour cela j'ai pris des chevaux que j'ai découper à l'endroit des colonne pour que l'ont ai l'impression que ce dernier passe dérrière le pilier. J'ai répéter cette opértion plusieurs fois pour donner ce résultat. </p>
-							<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+							<p>Montage photo réalisé avec le logiciel : Adobe Photoshop.</p>
+							<p>Année de réalisation du projet : 2014, durant mes études à Saint Diés en LP ISN</p>
 						</section>
 					</div>
 					
@@ -103,12 +104,12 @@
 			<div class="container">
 				<section>
 					<header>
-						<h2>Pellentesque vulputaterisus semper</h2>
+						<h2>Mes dernières réalisations</h2>
 						<span class="byline">In posuere eleifend semper augue maecenas ligula congue rutrum</span>
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics03.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/table-lit.bmp" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
@@ -117,7 +118,7 @@
 							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
 						</section>
 					</div>
-					<a href="#" class="button">Nulla luctus eleifend</a>
+					<a href="#" class="button">Gallerie</a>
 				</section>
 			</div>
 		</div>
