Changement des textes et ajout des images

--- a/twocolumn2 - residence.html
+++ b/twocolumn2 - residence.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Royale by TEMPLATED</title>
+		<title>Dauphin Morgane</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,7 +32,7 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">Royale</a></h1>
+					<h1><a href="#">Dauphin Morgane</a></h1>
 				</div>
 				
 				<!-- Nav -->
@@ -66,27 +66,27 @@
 					<div id="content" class="9u skel-cell-important">
 						<section>
 							<header>
-								<h2>Right Sidebar</h2>
+								<h2>Résidence de 40 Studios</h2>
 							</header>
-							<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
-							<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
-							<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+							<p>Lors de ma licence professionnelle, je devais effectué un stage en entreprise. Je l'ai réaliser dans l'entreprise <a>OMHOVER REALISATIONS</a>. Mon projet était de réaliser un film de présentation d'un bâtiment qui était encore alors en construction. C'est donc à partir de plans fournis par l'architecte que j'ai modéliser entièrement l'intérieur du bâtiment avec l'entrée princippale et son forum, le restaurant intérieur et la terrasse extérieur.</p>
+							<p>Dans un deuxième temps j'ai également modéliser l'intérieur d'un des 40 studio que compte cette résidence pour personnes handicapées vieillissantes. Je n'ai  réaliser que l'intérieur d'un seul studio qui sera montrer séparément par une coupure dans la vidéo du bâtiment extérieur.</p>
+							<p>Lors de la réalisation de ces modélisation j'ai scrupuleusement respecter les plans qui m'étaient fournis. Mais le choix du style et des formes des meubles ont été de ma propre interprétation aprés validation de mon commanditaire.</p>
 						</section>
 					</div>
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Donec dictum</h2>
+								<h2>Extérieur du bâtiment</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
-							<p>Pellentesque viverra  enim.Tristique ante ut risus. Quisque dictum. Integer nisl elementum.</p>
+							<a href="#" class="image full"><img src="images/Vue exterieur Zoom0600.jpg" alt=""></a>
+							<p>Vue extérieur du bâtiment avec aussi une vue du forum et du restaurant.</p>
 						</section>
 						<section>
 							<header>
-								<h2>Sagittis convallis</h2>
+								<h2>Intérieur d'un studio</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/pics08.jpg" alt=""></a>
-							<p>Quisque dictum. Integer nisl risus, sagittis convallis elementum.</p>
+							<a href="#" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<p>Extrait de la vidéo sur l'intérieur du studio ou l'ont peut voir le lit et la table.</p>
 						</section>
 					</div>
 				</div>
