Changement du texte de colonne

--- a/twocolumn2 - residence.html
+++ b/twocolumn2 - residence.html
@@ -79,7 +79,7 @@
 								<h2>Extérieur du bâtiment</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/Vue exterieur Zoom0600.jpg" alt=""></a>
-							<p>Vue extérieur du bâtiment avec aussi une vue du forum et du restaurant.</p>
+							<p>Vue en mode extérieur du bâtiment. Extrait de la vidéo.</p>
 						</section>
 						<section>
 							<header>
