--- a/twocolumn2 - residence.html
+++ b/twocolumn2 - residence.html
@@ -40,7 +40,7 @@
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
 						<li><a href="twocolumn1.html">Left Sidebar</a></li>
-						<li class="active"><a href="twocolumn2.html">Right Sidebar</a></li>
+						<li><a href="twocolumn2.html">Right Sidebar</a></li>
 						<li><a href="onecolumn.html">No Sidebar</a></li>
 					</ul>
 				</nav>
