Changement du bas de page

--- a/twocolumn2 - residence.html
+++ b/twocolumn2 - residence.html
@@ -101,7 +101,7 @@
 			<div class="container">
 				<section>
 					<header>
-						<h2>Pellentesque vulputaterisus semper</h2>
+						<h2>Mes dernières réalisations</h2>
 						<span class="byline">In posuere eleifend semper augue maecenas ligula congue rutrum</span>
 					</header>
 					<div class="row">
@@ -115,7 +115,7 @@
 							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
 						</section>
 					</div>
-					<a href="#" class="button">Nulla luctus eleifend</a>
+					<a href="#" class="button">Gallerie</a>
 				</section>
 			</div>
 		</div>
