--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Homepage</a></li>
-						<li><a href="twocolumn1.html">Left Sidebar</a></li>
-						<li><a href="twocolumn2.html">Right Sidebar</a></li>
-						<li><a href="onecolumn.html">No Sidebar</a></li>
+						<li><a href="twocolumn1.html">Apropos de moi</a></li>
+						<li><a href="twocolumn2.html">Mes compétences</a></li>
+						<li><a href="onecolumn.html">Contacte</a></li>
 					</ul>
 				</nav>
 
