changement du navi1

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Homepage</a></li>
-						<li><a href="twocolumn1.html">Apropos de moi</a></li>
+						<li><a href="twocolumn1.html">Présentation</a></li>
 						<li><a href="twocolumn2.html">Mes compétences</a></li>
-						<li><a href="onecolumn.html">Contacte</a></li>
+						<li><a href="onecolumn.html">Contact</a></li>
 					</ul>
 				</nav>
 
