--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Homepage</a></li>
-						<li><a href="twocolumn1.html">Présentation</a></li>
+						<li><a href="twocolumn1.html">Ma présentation</a></li>
 						<li><a href="twocolumn2.html">Mes compétences</a></li>
 						<li><a href="onecolumn.html">Contact</a></li>
 					</ul>
@@ -65,10 +65,10 @@
 				<div class="row">
 					<section>
 						<header>
-							<h2>Mes projets</h2>
+							<h2>Présentation</h2>
 						</header>
-						<p>This is <strong>Royale</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
-						<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+						<p>Ce site est un <strong>portefolio</strong> de mes réalisation dans le domaine du design mais également sur mes projets de pièces ou systèmes mécanisés. Il présente également une présentation de mon parcours et de mes compétences acquises que ce soit au cours de mes études mais aussi mes projets personnelles. Ce site contenant ainsi tout mes projets réalisé depuis mes débuts, on peut voir mon évolution dans le domaine de l'infographie et de la modélisation.</p>
+						<p>J'ai été passionnée par ce domaine car l'infographie et la modélisation 3D peut nous permettre de réaliser tout ce que nous imaginons.</p>
 					</section>
 				</div>
 				<div class="divider"></div>
