ajout de la page compositing

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 						</header>
 						<a href="#" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
 						<p>Travail sur le compositing d'une image déja existante, ajout de ciel, végétation, changement des ombres et ajout de personnages.</p>
-						<a href="#" class="button">Read More</a>
+						<a href="twocolumn1 - compositing.html" class="button">Read More</a>
 					</section>
 				</div>
 			</div>
