Changements images et textes

--- a/twocolumn1 - compositing.html
+++ b/twocolumn1 - compositing.html
@@ -39,9 +39,9 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
-						<li class="active"><a href="twocolumn1.html">Left Sidebar</a></li>
-						<li><a href="twocolumn2.html">Right Sidebar</a></li>
-						<li><a href="onecolumn.html">No Sidebar</a></li>
+						<li class="active"><a href="twocolumn1.html">Ma présentation</a></li>
+						<li><a href="twocolumn2.html">Mes compétences</a></li>
+						<li><a href="onecolumn.html">Contact</a></li>
 					</ul>
 				</nav>
 
@@ -66,28 +66,29 @@
 					<div id="sidebar" class="3u">
 						<section>
 							<header>
-								<h2>Avant retouche</h2>
+								<h2>Avant</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
-							<p>Pellentesque viverra  enim.Tristique ante ut risus. Quisque dictum. Integer nisl elementum.</p>
+							<a href="#" class="image full"><img src="images/compositing avant.png" alt=""></a>
+							<p>Image fournis pour la modification.</p>
 						</section>
 						<section>
 							<header>
-								<h2>Aprés retouche</h2>
+								<h2>Aprés</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
-							<p>Quisque dictum. Integer nisl risus, sagittis convallis elementum.</p>
+							<a href="#" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<p>Modification de l'image.</p>
 						</section>
 					</div>
 					
 					<div id="content" class="9u skel-cell-important">
 						<section>
 							<header>
-								<h2>Illusion d'optique</h2>
+								<h2>Compositing et retouche photo</h2>
 							</header>
-							<p>Dans le cadre de la découverte de photoshop lors de ma Licence Professionnelle Image et Sons Numérique, on nous a demander de réaliser un montage photo sur le théme de l'illusion d'optique.</p>
-							<p>Aprés avir effectuer des recherches pour me faire une idée de ce que je pourrais réaliser comme illusion d'optique, je me suis décider d'en faire un donnant l'impression qu'il y a plusieurs ranger de colonne alors qu'en réalité, il n'y en a qu'une. Pour cela j'ai pris des chevaux que j'ai découper à l'endroit des colonne pour que l'ont ai l'impression que ce dernier passe dérrière le pilier. J'ai répéter cette opértion plusieurs fois pour donner ce résultat. </p>
-							<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+							<p>Le travail de compositing étant trés important aprés un rendu, j'ai donc découvert le compositing avec ce bâtiment, qui n'as pas été réaliser par mes soins, en ajoutant des décors et en modifiant les ombres et lumières du bâtiment gràces au différentes couches.</p>
+							<p>Voici donc le résultat aprés avoir ajouter ici la végétation, modifier une fenêtre, ajouter des personnages avec leurs ombres ainsi pour finir un ciel concordant avec les ombres présente sur le bâtiment.</p>
+							<p>Cette image à été modifiée avec le logiciel : Adobe Photoshop.</p>
+							<p>Année de réalisation de ce projet : 2014, lors de mes études à Saint Diés en LP ISN.</p>
 						</section>
 					</div>
 					
