--- a/twocolumn1 - compositing.html
+++ b/twocolumn1 - compositing.html
@@ -39,7 +39,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
-						<li class="active"><a href="twocolumn1.html">Ma présentation</a></li>
+						<li><a href="twocolumn1.html">Ma présentation</a></li>
 						<li><a href="twocolumn2.html">Mes compétences</a></li>
 						<li><a href="onecolumn.html">Contact</a></li>
 					</ul>
