--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<li class="active"><a href="index.html">Homepage</a></li>
 						<li><a href="twocolumn1.html">Ma présentation</a></li>
 						<li><a href="twocolumn2.html">Mes compétences</a></li>
-						<li><a href="onecolumn.html">Contact</a></li>
+						<li><a href="onecolumn.html">Mes expériences</a></li>
 					</ul>
 				</nav>
 
