--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -41,7 +41,7 @@
 						<li><a href="index.html">Homepage</a></li>
 						<li class="active"><a href="twocolumn1.html">Ma présentation</a></li>
 						<li><a href="twocolumn2.html">Mes compétences</a></li>
-						<li><a href="onecolumn.html">Mes experiences</a></li>
+						<li><a href="onecolumn.html">Mes expériences</a></li>
 					</ul>
 				</nav>
 
@@ -69,14 +69,16 @@
 								<h2>Moi</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
-							<p>Pellentesque viverra  enim.Tristique ante ut risus. Quisque dictum. Integer nisl elementum.</p>
+							<p>Naissance : 07/05/1994.</p>
+							<p>En possession du permis B et d'une voiture.</p>
 						</section>
 						<section>
 							<header>
 								<h2>Me contacter</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/pics08.jpg" alt=""></a>
-							<p>Quisque dictum. Integer nisl risus, sagittis convallis elementum.</p>
+							<p>Mail : morgane.dauphin@hotmail.com</p>
+							<p>Potable : 06 68 08 09 82</p>
 						</section>
 					</div>
 					
