--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -68,7 +68,7 @@
 							<header>
 								<h2>Moi</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/ma_photo.png" alt=""></a>
 							<p>Naissance : 07/05/1994.</p>
 							<p>En possession du permis B et d'une voiture.</p>
 						</section>
@@ -90,6 +90,9 @@
 							<p>J'ai tout d'abord en 2012 effectuer un Bac <a>Sciences et techniques de l'ingénieur en génie mécanique de fabrication</a>(STI gmf) durant lequel j'ai découvert l'usinage, la lecture de plan, les bases de la mécanique ainsi que la modélisation de pièce 3D qui commençais déjà beaucoup à m'intéresser. Obtenu avec mention "Assez Bien".</p>
 							<p>C'est ainnsi que j'ai décider d'aller dans la continuité de mon Bac en faisant un <a>BTS de Conception Industrialisé Micro-mécanique</a>(CIM), obtenu en 2014, durant lequel j'ai appris a utiliser des machines programmables grace au modélisation réalisé sur ordinateur ainsi que la lecture de plan plus complèxe.</p>
 							<p>A la fin de ce BTS je me suis décider à changer dans une branche plus artistique possédant de la 3D car c'est ce que je préferais. J'ai donc embrayer sur une <a>Licence Professionnelle Images et Sons Numériques</a>. Durant cette licence nous avons appris énormément de techniques dans diverses domaines telle que l'architecture, la modélisation à but industriel, la réalisation de films, la réalisation de jeux vidéos, la réalisation de musiques et de bruitages, des connaissances générales dans le domaine du design et nous avons eu également des notions de programmation dans divers langages de programmation.</p>
+							<p></p>
+							<p>Mes centres d'intérêt :</p>
+							<p>La modélisation 3D et l'infographie, les voyages, les jeux vidéos, l'anglais, les films d'animation, la culture japonnaise, la lecture.</p>
 						</section>
 					</div>
 					
