--- a/twocolumn1.html
+++ b/twocolumn1.html
@@ -68,7 +68,7 @@
 							<header>
 								<h2>Moi</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/ma_photo.png" alt=""></a>
+							<a href="#" class="image full"><img src="images/ma_photo1.png" alt=""></a>
 							<p>Naissance : 07/05/1994.</p>
 							<p>En possession du permis B et d'une voiture.</p>
 						</section>
@@ -76,7 +76,7 @@
 							<header>
 								<h2>Me contacter</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/pics08.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/Mail-icone.png" alt=""></a>
 							<p>Mail : morgane.dauphin@hotmail.com</p>
 							<p>Potable : 06 68 08 09 82</p>
 						</section>
@@ -113,7 +113,7 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics03.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/table-lit.bmp" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
