--- a/twocolumn1 - illusion.html
+++ b/twocolumn1 - illusion.html
@@ -39,9 +39,9 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
-						<li><a href="twocolumn1.html">Left Sidebar</a></li>
-						<li><a href="twocolumn2.html">Right Sidebar</a></li>
-						<li><a href="onecolumn.html">No Sidebar</a></li>
+						<li><a href="twocolumn1.html">Ma présentation</a></li>
+						<li><a href="twocolumn2.html">Mes compétences</a></li>
+						<li><a href="onecolumn.html">Mes expériences</a></li>
 					</ul>
 				</nav>
 
