ajout du lien gallerie

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<a href="twocolumn2 - residence.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
@@ -133,7 +133,7 @@
 							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
 						</section>
 					</div>
-					<a href="#" class="button">Gallerie</a>
+					<a href="Gallerie.html" class="button">Gallerie</a>
 				</section>
 			</div>
 		</div>
