--- a/Gallerie.html
+++ b/Gallerie.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Royale by TEMPLATED</title>
+		<title>Dauphin Morgane</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -32,16 +32,16 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">Royale</a></h1>
+					<h1><a href="#">Dauphin Morgane</a></h1>
 				</div>
 				
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Homepage</a></li>
-						<li><a href="twocolumn1.html">Left Sidebar</a></li>
-						<li><a href="twocolumn2.html">Right Sidebar</a></li>
-						<li class="active"><a href="onecolumn.html">No Sidebar</a></li>
+						<li><a href="twocolumn1.html">Ma présentation</a></li>
+						<li><a href="twocolumn2.html">Mes compétences</a></li>
+						<li class="active"><a href="onecolumn.html">Mes expériences</a></li>
 					</ul>
 				</nav>
 
@@ -66,12 +66,23 @@
 				<div class="row">
 					<section>
 						<header>
-							<h2>No Sidebar</h2>
+							<h2>Gallerie</h2>
 						</header>
 						<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
 						<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
 						<p>Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget, tempus et, tellus. Etiam neque. Vivamus consequat lorem at nisl. Nullam non wisi a sem semper eleifend. Donec mattis libero eget urna. Duis pretium velit ac mauris. Proin eu wisi suscipit nulla suscipit interdum. Aenean lectus lorem, imperdiet at, ultrices eget, ornare et, wisi. Pellentesque adipiscing purus ac magna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque pede. Donec pulvinar ullamcorper metus. In eu odio at lectus pulvinar mollis. Vestibulum sem magna, elementum ut, vestibulum eu, facilisis quis, arcu. Mauris a dolor. Nulla facilisi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed blandit. Phasellus pellentesque, ante nec iaculis dapibus, eros justo auctor lectus, a lobortis lorem mauris quis nunc. Praesent pellentesque facilisis elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
 					</section>
+					<div class="row">
+						<section class="4u">
+							<a href="#" class="image full"><img src="images/pics03.jpg" alt=""></a>
+						</section>
+						<section class="4u">
+							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
+						</section>
+						<section class="4u">
+							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
+						</section>
+					</div>
 				</div>
 			</div>
 			<!-- /Welcome -->
@@ -84,7 +95,7 @@
 			<div class="container">
 				<section>
 					<header>
-						<h2>Pellentesque vulputaterisus semper</h2>
+						<h2>Mes dernières réalisations</h2>
 						<span class="byline">In posuere eleifend semper augue maecenas ligula congue rutrum</span>
 					</header>
 					<div class="row">
@@ -98,7 +109,7 @@
 							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
 						</section>
 					</div>
-					<a href="#" class="button">Nulla luctus eleifend</a>
+					<a href="#" class="button">Gallerie</a>
 				</section>
 			</div>
 		</div>
