--- a/Gallerie.html
+++ b/Gallerie.html
@@ -70,19 +70,19 @@
 						</header>
 					<div class="row">
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics03.jpg" alt=""></a>
+							<a href="twocolumn2 - residence.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
+							<a href="twocolumn1 - illusion.html" class="image full"><img src="images/Photomontage_DAUPHIN_Morgane.jpg" alt=""></a>
 						</section>
 					</div>
 					</section>
 					<div class="row">
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics03.jpg" alt=""></a>
+							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
