--- a/Gallerie.html
+++ b/Gallerie.html
@@ -85,7 +85,7 @@
 							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
 						</section>
 						<section class="4u">
 							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
