ajout 6em image

--- a/Gallerie.html
+++ b/Gallerie.html
@@ -88,7 +88,7 @@
 							<a href="#" class="image full"><img src="images/20140616_090915.jpg" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/ Scene_final_DAUPHIN_Morgane.png" alt=""></a>
 						</section>
 					</div>
 				</div>
