--- a/twocolumn1 - illusion.html
+++ b/twocolumn1 - illusion.html
@@ -68,7 +68,7 @@
 							<header>
 								<h2>Avant retouche</h2>
 							</header>
-							<a href="#" class="image full"><img src="images/pics07.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/cheval.jpg" alt=""></a>
 							<p>Image des colonnes avant montage photo.</p>
 						</section>
 						<section>
@@ -109,13 +109,13 @@
 					</header>
 					<div class="row">
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/table-lit.bmp" alt=""></a>
+							<a href=" twocolumn1 - illusion.html" class="image full"><img src="images/table-lit.bmp" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics04.jpg" alt=""></a>
+							<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="#" class="image full"><img src="images/pics05.jpg" alt=""></a>
+							<a href="twocolumn1 - compositing.html" class="image full"><img src="rendu_maison_DAUPHIN.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="#" class="button">Gallerie</a>
