--- a/twocolumn1 - illusion.html
+++ b/twocolumn1 - illusion.html
@@ -115,7 +115,7 @@
 							<a href="#" class="image full"><img src="images/RenduBlenderJaponaise.png" alt=""></a>
 						</section>
 						<section class="4u">
-							<a href="twocolumn1 - compositing.html" class="image full"><img src="rendu_maison_DAUPHIN.jpg" alt=""></a>
+							<a href="twocolumn1 - compositing.html" class="image full"><img src="images/rendu_maison_DAUPHIN.jpg" alt=""></a>
 						</section>
 					</div>
 					<a href="#" class="button">Gallerie</a>
