--- a/twocolumn1 - illusion.html
+++ b/twocolumn1 - illusion.html
@@ -69,7 +69,7 @@
 								<h2>Avant retouche</h2>
 							</header>
 							<a href="#" class="image full"><img src="images/cheval.jpg" alt=""></a>
-							<p>Image des colonnes avant montage photo.</p>
+							<p>Image d'un des chevaux avant montage photo.</p>
 						</section>
 						<section>
 							<header>
