--- a/twocolumn1 - compositing.html
+++ b/twocolumn1 - compositing.html
@@ -118,7 +118,7 @@
 							<a href="twocolumn2 - residence.html" class="image full"><img src="images/AFAEDAM_perspective.bmp" alt=""></a>
 						</section>
 					</div>
-					<a href="#" class="button">Gallerie</a>
+					<a href="Gallerie.html" class="button">Gallerie</a>
 				</section>
 			</div>
 		</div>
